fixing stretch, adding user left message

--- a/ClientApp/src/app/notify/notify.component.css
+++ b/ClientApp/src/app/notify/notify.component.css
@@ -144,6 +144,13 @@ p {
   box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
 
+.leftUser {
+  width: 100%;
+  text-align: center;
+  float: left;
+  font-size: 10px;
+}
+
 .viewResizeImage {
   width: 20px;
   height: 20px;
@@ -178,8 +185,9 @@ p {
 
 .collapseDisplay {
   margin-bottom: 8px;
-  display: grid;
   background-color: #ffffff;
+  max-width: 100%;
+  overflow-wrap: break-word;
 }
 
 .callBody {
@@ -190,18 +198,4 @@ p {
     border-top: 0;
     position: relative;
     display: block;
-}
-
-.editorFullDisplay {
-  font-size: 0.9em;
-  width: 100%;
-  text-align: left;
-  font-family: Arial;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  border: 0;
-  padding-top: 2px;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
 }
